<resources>
    <string name="app_name">Belajar Mengajar</string>

    <!--Main Activity-->
    <string name="welcome">Selamat Datang</string>
    <string name="welcome2">Selamat Datang!</string>
    <string name="ready">Siap menjadi guru yang baik?</string>
    <string name="name">Siapa namamu?</string>
    <string name="button">MULAI!</string>
    <!--Home-->
    <string name="question">Belajar apa hari ini?</string>

    <!--Login Page-->
    <string name="login">Silahkan login sebelum memulai</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_button">Login"</string>
    <string name="login_signUp">SignUp"</string>

    <string name="profilename">Halo,Nama</string>
    <string name="edit">Edit Profile </string>

    <!-- SignUp Page -->

    <!-- Blog Page -->
    <string name="tips">Pelajari tips menarik dari kami</string>
  
    <string name="back">Back</string>
</resources>