<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wave"
    tools:context=".activities.LoginActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="40dp"
            android:paddingHorizontal="30dp">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="144dp"
                android:layout_height="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logo_text_horizon"
                tools:layout_editor_absoluteY="143dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="?attr/colorPrimary"
                android:text="@string/welcome2"
                android:layout_marginTop="10dp"
                android:textSize="32sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView4"
                android:textColor="?attr/colorPrimary"
                android:text="@string/login"
                android:textSize="18sp"
                android:layout_marginBottom="20dp" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/username" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:hint="@string/password" />

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:paddingHorizontal="32dp"
                android:paddingVertical="18dp"
                android:backgroundTint="@color/black"
                android:text="@string/login_button"
                android:textColor="?attr/colorSecondary" />

            <Button
                android:id="@+id/button_signUp_Page"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingHorizontal="32dp"
                android:paddingVertical="18dp"
                android:backgroundTint="@color/black"
                android:text="@string/login_signUp"
                android:textColor="?attr/colorSecondary" />


        </LinearLayout>


    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>