<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.Signup">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginHorizontal="20dp"
        app:cardCornerRadius="15dp"
        app:cardElevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingVertical="40dp"
            android:paddingHorizontal="30dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/logo_1"
                tools:layout_editor_absoluteY="143dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView"
                android:textColor="?attr/colorPrimary"
                android:text="@string/login"
                android:layout_marginTop="10dp"
                android:textSize="30sp"
                android:textStyle="bold"
                android:layout_marginBottom="20dp"/>

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/username"/>
            <EditText
                android:id="@+id/etPassword"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"/>

            <Button
                android:id="@+id/button_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_signUp"
                android:textColor="?attr/colorSecondary"
                android:backgroundTint="?attr/colorPrimary"
                />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>